fix(start): fix content aligning

--- a/app/blocks/start/start.styl
+++ b/app/blocks/start/start.styl
@@ -25,8 +25,9 @@
 		justify-content center
 		align-items center
 		flex-direction column
-		z-index 100
+		width 100%
 		height 100%
+		z-index 100
 
 	&__title
 		margin-top 3rem
